fix: center align stats card

--- a/src/components/views/home/style.scss
+++ b/src/components/views/home/style.scss
@@ -63,3 +63,9 @@
 .dsar{
     color: #b3cde3 !important;
 }
+
+.metricWrapper{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
